axum-macros/tests/from_request/fail/via_and_rejection_derive.stderr
error: cannot use both `via` and `rejection_derive`
 --> tests/from_request/fail/via_and_rejection_derive.rs:5:32
  |
5 | #[from_request(via(Extension), rejection_derive(!Error))]
  |                                ^^^^^^^^^^^^^^^^

warning: unused import: `axum::extract::Extension`
 --> tests/from_request/fail/via_and_rejection_derive.rs:2:5
  |
2 | use axum::extract::Extension;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
